@@ -1,5 +1,8 @@
 2011-05-31  Werner Koch  <wk@g10code.com>
 
+	* pubkey.c (mgf1): Optimize by using gcry_md_reset.  Re-implement
+	for easier readability.
+
 	* pubkey.c (pkcs1_encode_for_signature, oaep_decode): Change
 	return value from one MPI to a buffer.
 	(gcry_pk_decrypt): Adjust for this change.
